# txt-trans

./: .gitignore  FileListTable.py  README.md  app.py  eventFilter.py  pyproject.toml  test.py
