[tool.poetry]
name = "txt-trans"
version = "0.1.0"
description = ""
authors = ["gyuha <nicegyuha@gmail.com>"]
readme = "README.md"
packages = [{include = "txt_trans"}]

[tool.poetry.dependencies]
python = "^3.10.10"
pyqt6 = "^6.4.2"
googletrans = "4.0.0-rc1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
